--- a/signup.html
+++ b/signup.html
@@ -1,49 +1,81 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width,initial-scale=1" />
-	<title>ScholarsNook — Sign Up</title>
-	<link rel="stylesheet" href="styles.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>ScholarsNook — Sign Up</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 <main class="container">
-<header class="brand">
-	<h1>ScholarsNook</h1>
-	<p class="tag">Start tracking your points</p>
-</header>
+  <header class="brand">
+    <h1>ScholarsNook</h1>
+    <p class="tag">Start tracking your points</p>
+  </header>
 
-<section class="card" id="signup-card">
-	<h2>Create Your Account</h2>
+  <section class="card">
+    <h2>Create Your Account</h2>
 
-	<form action="register.php" method="POST">
-		<div class="input-row">
-			<label for="fullName">Full name</label>
-			<input name="fullName" id="fullName" required />
-		</div>
-
-		<div class="input-row">
-			<label for="department">Department / College</label>
-			<input name="department" id="department" required />
-		</div>
-
-		<div class="input-row">
-			<label for="username">Username</label>
-			<input name="reg_username" id="username" type="text" required />
-		</div>
-		
-		<div class="input-row">
-			<label for="signupPassword">Choose a password</label>
-			<input name="signupPassword" id="signupPassword" type="password" required />
-		</div>
-
-		<div class="actions">
-			<button type="submit">Create account</button>
-			<a href="index.html" class="alt-btn">Back to Login</a>
-		</div>
-	</form>
-</section>
-
+    <form id="signupForm">
+      <div class="input-row">
+        <label for="fullName">Full name</label>
+        <input name="fullName" id="fullName" required />
+      </div>
+      <div class="input-row">
+        <label for="department">Department / College</label>
+        <input name="department" id="department" required />
+      </div>
+      <div class="input-row">
+        <label for="username">Username</label>
+        <input name="reg_username" id="username" type="text" required />
+      </div>
+      <div class="input-row">
+        <label for="signupPassword">Choose a password</label>
+        <input name="signupPassword" id="signupPassword" type="password" required />
+      </div>
+      <div class="input-row">
+        <label for="initPoints">Starting points (optional)</label>
+        <input name="initPoints" id="initPoints" type="number" value="0" />
+      </div>
+      <div class="actions">
+        <button type="submit">Create account</button>
+        <a href="login.html" class="alt-btn">Back to Login</a>
+      </div>
+    </form>
+    <p id="msg" class="muted" style="color:green;margin-top:8px;"></p>
+  </section>
 </main>
+
+<script>
+// Google Sheets API append (no OAuth needed with API-KEY + unrestricted sheet)
+const SHEET_ID = '1BxiY6lRCKikGYLNAc0g8i9z5z8VfG7lKZc6PQrN9xqw';   // ← your sheet ID
+const API_KEY  = 'AIzaSyB_xxxxxxxxxxxxxxxxxxxxxxxxxxx';        // ← your API key
+const ENDPOINT = `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/Sheet1!A:E/append?valueInputOption=RAW&key=${API_KEY}`;
+
+document.getElementById('signupForm').addEventListener('submit', async e => {
+  e.preventDefault();
+  const f = e.target;
+  const body = [
+    f.fullName.value.trim(),
+    f.department.value.trim(),
+    f.reg_username.value.trim(),
+    f.signupPassword.value.trim(),
+    parseInt(f.initPoints.value) || 0
+  ];
+  const resp = await fetch(ENDPOINT, {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ values: [body] })
+  });
+  if (resp.ok) {
+    document.getElementById('msg').textContent = 'Registration successful! Redirecting…';
+    setTimeout(() => location.href = 'login.html', 1500);
+  } else {
+    const err = await resp.json();
+    document.getElementById('msg').style.color = 'red';
+    document.getElementById('msg').textContent = err.error.message || 'Failed to register.';
+  }
+});
+</script>
 </body>
 </html>
