--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <section class="card" id="auth-card">
 	<h2>Member Login</h2>
 
-	<form action="login.php" method="POST">
+	<form action="login.html" method="POST">
     <div class="input-row">
         <label for="loginUsername">Username</label>
         <input name="login_username" id="loginUsername" type="text" required />
@@ -35,3 +35,4 @@
 </main>
 </body>
 </html>
+
