--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <input name="login_password" id="loginPassword" type="password" required />
     </div>
     <div class="actions">
-        <button type="submit">Submit</button>
+        <a href="login.html" class="alt-btn">Go to Login</a>
         <a href="signup.html">New here? Sign up</a>
     </div>
 </form>
@@ -35,4 +35,5 @@
 </main>
 </body>
 </html>
+
 
