--- a/dashboard.html
+++ b/dashboard.html
@@ -47,7 +47,7 @@
 
 <script>
 const SHEET_ID = '1BxiY6lRCKikGYLNAc0g8i9z5z8VfG7lKZc6PQrN9xqw';
-const CSV_URL  = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/pub?output=csv`;
+const CSV_URL  = `https://docs.google.com/spreadsheets/d/e/2PACX-1vTOJeGKfYBUQ4emzgbrmAIT59bQmF96np6uQXfEkpikwN9dUVBejwx2iCJ6jlAGDC0qTz5-qVFi2Inu/pub?output=csv`;
 
 const user = sessionStorage.getItem('user');
 if (!user) location.href = 'login.html';
@@ -76,3 +76,4 @@ if (!user) location.href = 'login.html';
 </script>
 </body>
 </html>
+
