--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
     </div>
     <div class="actions">
       <button type="button" id="doLogin">Submit</button>
-      <a href="signup.html">New here? Sign up</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLScKqQaP-ZapdtCPMbO2J4hOItHol7WnSAUQtbkogJXSFX8k8w/viewform?usp=header" target="_blank" rel="noopener">New here? Sign up</a>
     </div>
     <p id="msg" class="muted" style="color:red;margin-top:8px;"></p>
   </section>
@@ -64,6 +64,7 @@ document.getElementById('doLogin').addEventListener('click', async () => {
 </script>
 </body>
 </html>
+
 
 
 
