--- a/index.html
+++ b/index.html
@@ -1,39 +1,69 @@
-	<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width,initial-scale=1" />
-	<title>ScholarsNook — Member Login</title>
-	<link rel="stylesheet" href="styles.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>ScholarsNook — Member Login</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 <main class="container">
-<header class="brand">
-	<h1>ScholarsNook</h1>
-	<p class="tag">Track your points • Flex your wins</p>
-</header>
+  <header class="brand">
+    <h1>ScholarsNook</h1>
+    <p class="tag">Track your points • Flex your wins</p>
+  </header>
 
-<section class="card" id="auth-card">
-	<h2>Member Login</h2>
+  <section class="card">
+    <h2>Member Login</h2>
 
-	<form action="login.html" method="POST">
     <div class="input-row">
-        <label for="loginUsername">Username</label>
-        <input name="login_username" id="loginUsername" type="text" required />
+      <label for="loginUsername">Username</label>
+      <input id="loginUsername" type="text" required />
     </div>
     <div class="input-row">
-        <label for="loginPassword">Password</label>
-        <input name="login_password" id="loginPassword" type="password" required />
+      <label for="loginPassword">Password</label>
+      <input id="loginPassword" type="password" required />
     </div>
     <div class="actions">
-        <a href="login.html" class="alt-btn">Go to Login</a>
-        <a href="signup.html">New here? Sign up</a>
+      <button type="button" id="doLogin">Submit</button>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLScKqQaP-ZapdtCPMbO2J4hOItHol7WnSAUQtbkogJXSFX8k8w/viewform?usp=header" target="_blank" rel="noopener">New here? Sign up</a>
     </div>
-</form>
-</section>
-
+    <p id="msg" class="muted" style="color:red;margin-top:8px;"></p>
+  </section>
 </main>
+
+<script>
+const SHEET_ID = '1BxiY6lRCKikGYLNAc0g8i9z5z8VfG7lKZc6PQrN9xqw'; // ← your sheet ID
+const CSV_URL  = `https://docs.google.com/spreadsheets/d/e/2PACX-1vTOJeGKfYBUQ4emzgbrmAIT59bQmF96np6uQXfEkpikwN9dUVBejwx2iCJ6jlAGDC0qTz5-qVFi2Inu/pub?output=csv`;
+
+document.getElementById('doLogin').addEventListener('click', async () => {
+  const user = document.getElementById('loginUsername').value.trim();
+  const pass = document.getElementById('loginPassword').value.trim();
+  if (!user || !pass) return;
+
+  try {
+    const res  = await fetch(CSV_URL);
+    const txt  = await res.text();
+    const rows = txt.split('\n').slice(1);
+    let ok = false;
+    for (const raw of rows) {
+      const cols = raw.split(',').map(c => c.replace(/^"(.*)"$/, '$1').trim());
+      const [,,u,p] = cols;
+      if (u === user && p === pass) { ok = true; break; }
+    }
+    if (ok) {
+      sessionStorage.setItem('user', user);
+      location.href = 'dashboard.html';
+    } else {
+      document.getElementById('msg').textContent = 'Invalid username or password.';
+    }
+  } catch (e) {
+    document.getElementById('msg').textContent = 'Network error – try again.';
+  }
+});
+</script>
 </body>
 </html>
+
 
 
