--- a/dashboard.html
+++ b/dashboard.html
@@ -43,6 +43,32 @@
       <a href="login.html" class="alt-btn" style="background: var(--muted);">Log out</a>
     </div>
   </section>
+
+  <section class="calendar">
+    <h2>Up-coming Events</h2>
+      <div>
+      <ul id="cal"></ul>
+      </div>
+        
+      <script>
+      const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vStp6kZ6fCNHYDHxJlQjPl84GM-V83PsQQzEFaEpRQza7GEGctPoFZ7ngw0mgMn8Do-ItW5JGfJCjcs/pub?output=csv';
+      
+      (async () => {
+        const res = await fetch(CSV_URL);
+        const txt = await res.text();
+        const rows = txt.split('\n').slice(1); // skip header
+        const now = new Date();
+        const html = rows
+          .map(r => r.split(',').map(c => c.replace(/^"(.*)"$/, '$1').trim()))
+          .filter(([, , , date]) => new Date(date) >= now)          // future only
+          .slice(0, 5)                                               // next 5
+          .map(([time, title, name, date]) =>
+            `<li><strong>${title}</strong> – ${date} ${time}<br><small>${name}</small></li>`
+          ).join('');
+        document.getElementById('cal').innerHTML = html || '<li>No upcoming events.</li>';
+      })();
+      </script>
+  </section>
 </main>
 
 <script>
@@ -81,4 +107,5 @@ if (!user) location.href = 'login.html';
 </script>
 </body>
 </html>
+
 
