--- a/dashboard.html
+++ b/dashboard.html
@@ -45,30 +45,30 @@
   </section>
 
   <section class="calendar">
-    <h2>Up-coming Events</h2>
-      <div>
-      <ul id="cal"></ul>
-      </div>
-        
-      <script>
-      const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vStp6kZ6fCNHYDHxJlQjPl84GM-V83PsQQzEFaEpRQza7GEGctPoFZ7ngw0mgMn8Do-ItW5JGfJCjcs/pub?output=csv';
-      
-      (async () => {
-        const res = await fetch(CSV_URL);
-        const txt = await res.text();
-        const rows = txt.split('\n').slice(1); // skip header
-        const now = new Date();
-        const html = rows
-          .map(r => r.split(',').map(c => c.replace(/^"(.*)"$/, '$1').trim()))
-          .filter(([, , , date]) => new Date(date) >= now)          // future only
-          .slice(0, 5)                                               // next 5
-          .map(([time, title, name, date]) =>
-            `<li><strong>${title}</strong> – ${date} ${time}<br><small>${name}</small></li>`
-          ).join('');
-        document.getElementById('cal').innerHTML = html || '<li>No upcoming events.</li>';
-      })();
-      </script>
-  </section>
+  <h2>Up-coming Events</h2>
+  <ul id="cal"></ul>
+
+  <script>
+  const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vStp6kZ6fCNHYDHxJlQjPl84GM-V83PsQQzEFaEpRQza7GEGctPoFZ7ngw0mgMn8Do-ItW5JGfJCjcs/pub?output=csv';
+
+  (async () => {
+    const res = await fetch(CSV_URL);
+    const txt = await res.text();
+    const rows = txt.split('\n').slice(1);
+    console.log('CAL-RAW:', rows[0], 'CAL-COLS:', rows[0]?.split(','));   // ← debug
+
+    const now = new Date();
+    const html = rows
+      .map(r => r.split(',').map(c => c.replace(/^"(.*)"$/, '$1').trim()))
+      .filter(([, , , date]) => new Date(date) >= now)   // future only
+      .slice(0, 5)
+      .map(([time, title, name, date]) =>
+        `<li><strong>${title}</strong> – ${date} ${time}<br><small>${name}</small></li>`
+      ).join('');
+    document.getElementById('cal').innerHTML = html || '<li>No upcoming events.</li>';
+  })();
+  </script>
+</section>
 </main>
 
 <script>
@@ -107,5 +107,6 @@ if (!user) location.href = 'login.html';
 </script>
 </body>
 </html>
+
 
 
