--- a/dashboard.html
+++ b/dashboard.html
@@ -53,16 +53,16 @@
     const res = await fetch(CSV_URL);
     const txt = await res.text();
     const rows = txt.split('\n').slice(1);
-    console.log('TXT length:', txt.length);
-    console.log('First row:', rows[0], 'Split:', rows[0]?.split(','));
-
     const now = new Date();
     const html = rows
       .map(r => r.split(',').map(c => c.replace(/^"(.*)"$/, '$1').trim()))
-      .filter(([, , , date]) => new Date(date) >= now)   // future only
+      .filter(([, , , , date]) => {                       // date = col 4
+        const [d, m, y] = date.split('/');
+        return new Date(`${y}-${m}-${d}`) >= now;          // yyyy-mm-dd
+      })
       .slice(0, 5)
-      .map(([time, title, name, date]) =>
-        `<li><strong>${title}</strong> – ${date} ${time}<br><small>${name}</small></li>`
+      .map(([time, title, , , date]) =>
+        `<li><strong>${title}</strong> – ${date} ${time}<br></li>`
       ).join('');
     document.getElementById('cal').innerHTML = html || '<li>No upcoming events.</li>';
   })();
@@ -106,6 +106,7 @@ if (!user) location.href = 'login.html';
 </script>
 </body>
 </html>
+
 
 
 
