--- a/dashboard.html
+++ b/dashboard.html
@@ -54,12 +54,14 @@
     const txt = await res.text();
     const rows = txt.split('\n').slice(1);
     const now = new Date();
-    const html = rows
+    const filtered = rows
       .map(r => r.split(',').map(c => c.replace(/^"(.*)"$/, '$1').trim()))
-      .filter(([, , , , date]) => {                       // date = col 4
+      .filter(([, , , , date]) => {
         const [d, m, y] = date.split('/');
-        return new Date(`${y}-${m}-${d}`) >= now;          // yyyy-mm-dd
-      })
+        return new Date(`${y}-${m}-${d}`) >= now;
+      });
+    console.log('Filtered rows:', filtered.length, filtered[0]); // ← debug
+    const html = filtered
       .slice(0, 5)
       .map(([time, title, , , date]) =>
         `<li><strong>${title}</strong> – ${date} ${time}<br></li>`
@@ -106,6 +108,7 @@ if (!user) location.href = 'login.html';
 </script>
 </body>
 </html>
+
 
 
 
