--- a/dashboard.html
+++ b/dashboard.html
@@ -57,11 +57,11 @@
     const now = new Date();
     const filtered = rows
       .map(r => r.split(',').map(c => c.replace(/^"(.*)"$/, '$1').trim()))
+      .filter(([, , , , date]) => date && date.includes('/'))   // ← must exist and contain "/"
       .filter(([, , , , date]) => {
         const [d, m, y] = date.split('/');
         return new Date(`${y}-${m}-${d}`) >= now;
       });
-    console.log('Filtered rows:', filtered.length, filtered[0]); // debug
     const html = filtered
       .slice(0, 5)
       .map(([time, title, , , date]) =>
@@ -109,6 +109,7 @@ if (!user) location.href = 'login.html';
 </script>
 </body>
 </html>
+
 
 
 
