--- a/dashboard.html
+++ b/dashboard.html
@@ -59,8 +59,8 @@
       .map(r => r.split(',').map(c => c.replace(/^"(.*)"$/, '$1').trim()))
       .filter(([, , , date]) => date && date.includes('/'))   // must exist and contain "/"
       .filter(([, , , date]) => {
-        const [d, m, y] = date.split('/');
-        return new Date(`${y}-${m}-${d}`) >= now;
+      const [d, m, y] = date.split('/');
+      .return new Date(`${y}-${m}-${d}`) >= new Date().setHours(0,0,0,0);   // today or future
       });
     const html = filtered
       .slice(0, 5)
@@ -109,6 +109,7 @@ if (!user) location.href = 'login.html';
 </script>
 </body>
 </html>
+
 
 
 
