--- a/dashboard.html
+++ b/dashboard.html
@@ -57,10 +57,12 @@
     const now = new Date();
     const filtered = rows
       .map(r => r.split(',').map(c => c.replace(/^"(.*)"$/, '$1').trim()))
-      .filter(([, , , date]) => date && date.includes('/'))   // must exist and contain "/"
+      .filter(([, , , date]) => date && date.includes('/'))
       .filter(([, , , date]) => {
-      const [d, m, y] = date.split('/');
-      .return new Date(`${d}-${m}-${y}`) >= new Date().setHours(0,0,0,0);   // today or future
+        const [d, m, y] = date.split('/');
+        const event = new Date(`${y}-${m}-${d}`);
+        console.log('DATE:', date, 'EVENT:', event, 'NOW:', now, 'KEEP:', event >= now); // ← debug
+        return event >= now;
       });
     const html = filtered
       .slice(0, 5)
@@ -109,6 +111,7 @@ if (!user) location.href = 'login.html';
 </script>
 </body>
 </html>
+
 
 
 
