--- a/dashboard.html
+++ b/dashboard.html
@@ -55,19 +55,18 @@
     const txt = await res.text();
     const rows = txt.split('\n').slice(1);
     const now = new Date();
-    const filtered = rows
+    const html = rows
       .map(r => r.split(',').map(c => c.replace(/^"(.*)"$/, '$1').trim()))
-      .filter(([, , , date]) => date && date.includes('/'))
-      .filter(([, , , date]) => {
-        const [d, m, y] = date.split('/');
-        const event = new Date(`${y}-${m}-${d}`);
-        console.log('DATE:', date, 'EVENT:', event, 'NOW:', now, 'KEEP:', event >= now); // ← debug
-        return event >= now;
+      .filter(([, , , , date]) => date && date.includes('/'))   // must exist and contain "/"
+      .filter(([, , , , date]) => {
+        const datePart = date.split(' ')[0];            // remove time
+        const [d, m, y] = datePart.split('/');
+        return new Date(`${y}-${m}-${d}`) >= now;
       });
     const html = filtered
       .slice(0, 5)
       .map(([time, title, , , date]) =>
-        `<li><strong>${title}</strong> – ${date} ${time}<br></li>`
+        `<li><strong>${title}</strong> – ${date.split(' ')[0]} ${time}<br></li>`
       ).join('');
     document.getElementById('cal').innerHTML = html || '<li>No upcoming events.</li>';
   })();
@@ -111,6 +110,7 @@ if (!user) location.href = 'login.html';
 </script>
 </body>
 </html>
+
 
 
 
