--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
 
 <body>
 <main class="container">
-  <header class="brand">
-    <h1>ScholarsNook</h1>
-    <p class="tag">Track your points • Flex your wins</p>
+  <header class="brand" style="display:flex; align-items:center; gap:12px;">
+  <img src="logo.png" alt="ScholarsNook logo" style="height:32px;"> <!-- adjust height -->
+    <div>
+      <h1>ScholarsNook</h1>
+      <p class="tag">Track your points • Flex your wins</p>
+    </div>
   </header>
 
   <section class="card">
@@ -95,3 +98,4 @@ document.getElementById('doLogin').addEventListener('click', async () => {
 </script>
 </body>
 </html>
+
