--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
 <body>
 <main class="container">
-  <header class="brand" style="display:flex; align-items:center; gap:12px;">
-  <img src="logo.png" alt="ScholarsNook logo" style="height:64px;"> <!-- adjust height -->
+  <header class="brand" style="display:flex; align-items:center; gap:6px;">
+  <img src="logo.png" alt="ScholarsNook logo" style="height:128px;"> <!-- adjust height 64 good-->
     <div>
       <h1>ScholarsNook</h1>
       <p class="tag">Track your points • Flex your wins</p>
@@ -98,5 +98,6 @@ document.getElementById('doLogin').addEventListener('click', async () => {
 </script>
 </body>
 </html>
+
 
 
