--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <body>
 <main class="container">
-  <header class="brand" style="display:flex; align-items:center; gap:6px;">
+  <header class="brand" style="display:flex; align-items:center; gap:6px; white-space:nowrap;">
   <img src="logo.png" alt="ScholarsNook logo" style="height:96px;"> <!-- adjust height 64 good-->
     <div>
       <h1>ScholarsNook</h1>
@@ -98,6 +98,7 @@ document.getElementById('doLogin').addEventListener('click', async () => {
 </script>
 </body>
 </html>
+
 
 
 
