--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 <main class="container">
   <header class="brand" style="display:flex; align-items:center; gap:6px; white-space:nowrap;">
   <img src="logo.png" alt="ScholarsNook logo" style="height:96px;"> <!-- adjust height 64 good-->
-    <div>
-      <h1>ScholarsNook</h1>
-      <p class="tag">Track your points • Flex your wins</p>
-    </div>
+    <span style="display:flex; align-items:baseline; gap:8px;">
+    <h1 style="margin:0; font-size:1.5rem;">ScholarsNook</h1>
+    <p class="tag" style="margin:0; font-size:0.9rem;">Track your points • Flex your wins</p>
+    </span>
   </header>
 
   <section class="card">
@@ -98,6 +98,7 @@ document.getElementById('doLogin').addEventListener('click', async () => {
 </script>
 </body>
 </html>
+
 
 
 
