--- a/dashboard.html
+++ b/dashboard.html
@@ -62,6 +62,16 @@
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.06);
       margin-top: 16px;
     }
+
+    /*  GREEN GRADIENT for Welcome → Points  */
+    .hero {
+      background: linear-gradient(135deg, var(--ths-green) 0%, #2e7d32 100%);
+      margin: 0 -20px 20px -20px;
+      padding: 60px 20px;
+      text-align: center;
+      color: #fff;
+      border-radius: 0;
+    }
   </style>
 </head>
 
@@ -127,3 +137,4 @@ if (!user) location.href = 'login.html';
 </script>
 </body>
 </html>
+
