--- a/dashboard.html
+++ b/dashboard.html
@@ -65,12 +65,12 @@
 
     /*  GREEN GRADIENT for Welcome → Points  */
     .hero {
-      background: linear-gradient(135deg, var(--ths-green) 0%, #2e7d32 100%);
+      background: linear-gradient(135deg, var(--ths-green) 0%, var(--ths-violet) 100%);
       margin: 0 -20px 20px -20px;
       padding: 60px 20px;
       text-align: center;
       color: #fff;
-      border-radius: 0;
+      border-radius: 12px 12px 0 0;   /* rounded top only */
     }
   </style>
 </head>
@@ -137,4 +137,5 @@ if (!user) location.href = 'login.html';
 </script>
 </body>
 </html>
+
 
