--- a/dashboard.html
+++ b/dashboard.html
@@ -97,7 +97,7 @@
   <section class="card">
     <h2>Leaderboard – Top 3</h2>
     <ol id="top3" class="leaderboard"></ol>
-    <p class="muted">More features coming soon…</p>
+    <p class="--ths-black">More features coming soon…</p>
     <div class="actions">
       <a href="login.html" class="alt-btn" style="background: var(--muted);">Log out</a>
     </div>
@@ -137,5 +137,6 @@ if (!user) location.href = 'login.html';
 </script>
 </body>
 </html>
+
 
 
