--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
       <a href="https://docs.google.com/forms/d/e/1FAIpQLScKqQaP-ZapdtCPMbO2J4hOItHol7WnSAUQtbkogJXSFX8k8w/viewform?usp=header" target="_blank" rel="noopener">New here? Sign up</a>
     </div>
     <p id="msg" class="muted" style="color:red;margin-top:8px;"></p>
+    <!--  WATERMARK  -->
+    <div style="position:fixed; bottom:8px; right:8px; font-size:0.7rem; color:rgba(255,255,255,0.6); pointer-events:none; white-space:nowrap;">
+      Made by <strong>Joseph Victor Valones 🔹 Honor Society</strong>
+    </div>
   </section>
 </main>
 
@@ -98,6 +102,7 @@ document.getElementById('doLogin').addEventListener('click', async () => {
 </script>
 </body>
 </html>
+
 
 
 
