--- a/dashboard.html
+++ b/dashboard.html
@@ -102,6 +102,10 @@
       <a href="login.html" class="alt-btn" style="background: var(--muted);">Log out</a>
     </div>
   </section>
+
+  <div style="position:fixed; bottom:8px; right:8px; font-size:0.7rem; color:rgba(255,255,255,0.6); pointer-events:none; white-space:nowrap;">
+      Made by <strong>Joseph Victor Valones 🔹 Honor Society</strong>
+  </div>
 </main>
 
 <script>
@@ -137,6 +141,7 @@ if (!user) location.href = 'login.html';
 </script>
 </body>
 </html>
+
 
 
 
