--- a/dashboard.html
+++ b/dashboard.html
@@ -95,6 +95,14 @@
   </section>
 
   <section class="card">
+    <h2>Upcoming Activities</h2>
+    <h3>January</h3>
+    <ul>Xmas Party</ul>
+    <h3>February</h3>
+    <ul>valentiens day</ul>
+  </section>
+
+  <section class="card">
     <h2>Leaderboard – Top 3</h2>
     <ol id="top3" class="leaderboard"></ol>
     <p style="#000000">More features coming soon…</p>
@@ -141,6 +149,7 @@ if (!user) location.href = 'login.html';
 </script>
 </body>
 </html>
+
 
 
 
